--- a/devstack_comp1.yaml
+++ b/devstack_comp1.yaml
@@ -1,8 +1,8 @@
 ---
-- hosts: default
+- hosts: compute1
   vars:
     devstack_repo: git://github.com/openstack-dev/devstack.git
-    public_ip: 192.168.27.100
+    public_ip: 192.168.28.101
     version: stable/havana
     neutron: True
     swift: True
@@ -16,10 +16,10 @@
        - git
 
     - name: checkout devstack
-      git: "repo={{ devstack_repo }} dest=/home/vagrant/devstack version={{ version }}"
+      git: "repo={{ devstack_repo }} dest=/home/vagrant/devstack version=stable/grizzly"
 
     - name: localrc
-      template: src=templates/localrc.j2 dest=/home/vagrant/devstack/localrc
+      template: src=templates/localrc_comp1 dest=/home/vagrant/devstack/localrc
 
     - name: source openrc in profile
       lineinfile: dest=/home/vagrant/.profile regexp=".*openrc" line='. /home/vagrant/devstack/openrc'
@@ -27,4 +27,7 @@
     - name: enable eth2
       command: ip link set dev eth2 up
       sudo: True
-
+  
+    - name: hostname setting
+      action: shell hostname compute1
+      sudo: True
