--- a/devstack_comp1.yaml
+++ b/devstack_comp1.yaml
@@ -16,10 +16,10 @@
        - git
 
     - name: checkout devstack
-      git: "repo={{ devstack_repo }} dest=/home/vagrant/devstack version=stable/grizzly"
+      git: "repo={{ devstack_repo }} dest=/home/vagrant/devstack version={{ version }}"
 
     - name: localrc
-      template: src=templates/localrc_comp1 dest=/home/vagrant/devstack/localrc
+      template: src=templates/localrc_comp dest=/home/vagrant/devstack/localrc
 
     - name: source openrc in profile
       lineinfile: dest=/home/vagrant/.profile regexp=".*openrc" line='. /home/vagrant/devstack/openrc'
@@ -30,4 +30,6 @@
   
     - name: hostname setting
       action: shell hostname compute1
+      action: shell echo compute1 > /etc/hostname
       sudo: True
+
